Disable global name analysis with var declarations inside with (bug 585524, r=dmandelin).